--- a/AISSystem/src/main/webapp/WEB-INF/resources/css/home.css
+++ b/AISSystem/src/main/webapp/WEB-INF/resources/css/home.css
@@ -1,125 +1,13 @@
-body{
-	background: white;
-	margin: 0;
-	padding: 0;
-	min-height: 800px;
-	font-family: Arial, Helvetica, sans-serif;
-}
 
-.header{
-	width: 100%;
-	height: 40px;
-	background: #fff;
-	border-bottom:1px solid #BDBDBD;
-	text-indent: 50px;
-	line-height: 40px;
-}
-
-.title{
-	width: 250px;
-	float: left;
-}
-.search {
-	width: 250px;
-	height: 30px;
-  	margin-top: 5px;
-  	margin-left: 800px;
-  	font-size: 15px;
-  	float: left;
-  	border-radius: 20px;
-}
-
-.search:focus {
-  	border-radius: 20px;
-}
-
-.menu_div{
-	background: #0171a9;
-	width: 200px;
-	height: 100% auto;
-	min-height: 700px;
-	float: left;
-	text-indent: 10px;
-	border-right:1px solid #BDBDBD;
-}
-
-.icon {
-	width: 40px;
-	height: 40px;
-	margin-left: -80px;
-	float: left;
-	padding-top: 10px;
-}
-
-.icon-search {
-	position: absolute;
-	margin-left: 1175px;
-}
-.menu_div{
-	float: left;
-}
-.menu_div ul
-{
-	padding: 80px 0px;
-	margin:0px;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:15px;
-	color:#FFF;
-	list-style:none;
-}
-.menu_div ul li
-{
-	background:#fff;
-	line-height:30px;
-    border-bottom:1px solid #333;
-}
-.icon-in-list {
-	width: 25px;
-	height: 25px;
-	margin-left: 15px;
-	padding-left: -10px;
-	float: left;
-	color: black;
-	padding-top: 6px;
-}
-.menu_div ul li a
-{
-	text-decoration:none;
-	color: black;
-	display:block;
-	text-indent: 20px;
-}
-.menu_div ul li a:hover
-{
-	background: #9ddceb;
-}
-.menu_div ul li#active
-{
-	background: #49bcd7;
-}
-
-.logout{
-	width: 95%;
-	height: 50px;
-	margin-right: 10px;
-	text-align: right;
-}
-.logout a{
-	text-decoration:none;
-	color: white;
-	display:block;
-	margin-top: 450px;
-	font-style: italic;
-}
-
-#chartContainer{
+#chartContainer, #chartContainer2{
 	background: #ccc;
 }
 
-.gender{
+.chart{
 	margin-right: 10px;
-	width: 400px;
-	height: 300px
+	width: 450px;
+	height: 300px;
+	float: left;
 }
 .personal-list table{
 	width: 600px;
