--- a/AISSystem/src/main/webapp/WEB-INF/resources/css/tag.css
+++ b/AISSystem/src/main/webapp/WEB-INF/resources/css/tag.css
@@ -8,7 +8,7 @@ body{
 
 .header{
 	width: 100%;
-	height: 40px;
+	height: 6vh;
 	background: #fff;
 	border-bottom:1px solid #BDBDBD;
 	text-indent: 50px;
@@ -35,9 +35,9 @@ body{
 
 .menu_div{
 	background: #0171a9;
-	width: 200px;
-	height: 100% auto;
-	min-height: 650px;
+	width: 17vw;
+	bottom: 0px;
+	min-height: 94vh;
 	float: left;
 	text-indent: 10px;
 	border-right:1px solid #BDBDBD;
@@ -108,6 +108,6 @@ body{
 	text-decoration:none;
 	color: white;
 	display:block;
-	margin-top: 350px;
+	margin-top: 45vh;
 	font-style: italic;
 }
