--- a/AISSystem/src/main/webapp/WEB-INF/resources/css/notification.css
+++ b/AISSystem/src/main/webapp/WEB-INF/resources/css/notification.css
@@ -22,7 +22,7 @@ h1 {
     float: left;
     margin-top: 15px;
     border-top: 1px solid #ccc;
-    min-height: 115px;
+    min-height: 114px;
     line-height: 50px;
     padding-left: 15px;
     margin-left: 5vw;
@@ -47,4 +47,18 @@ h1 {
 .Delete {
 	background-color: #CC0000;
 	color: #fff;
+}
+
+.success {
+	color: green; 
+	text-align: right; 
+	margin-right: 90px;
+	font-style: italic;
+}
+
+.failed {
+	color: red; 
+	text-align: right; 
+	margin-right: 90px;
+	font-style: italic;
 }
