--- a/AISSystem/src/main/webapp/WEB-INF/resources/css/home.css
+++ b/AISSystem/src/main/webapp/WEB-INF/resources/css/home.css
@@ -13,13 +13,13 @@ h2 {
 }
 .chart{
 	margin-right: 10px;
-	width: 49%;
+	width: 48%;
 	height: 300px;
 	float: left;
 }
 
 .div-table table{
-	margin-left: 50px;
+	margin-left: 30px;
 	width: 700px;
 	float: left;
 }
@@ -46,4 +46,14 @@ h2 {
 
 .blue {
 	color: Blue;
+}
+
+.icon-emp {
+	margin-left: 15px;
+	font-size: 20px;
+}
+
+.addEmployee {
+	width: 20%;
+	margin-left: 70%;
 }
