--- a/AISSystem/src/main/webapp/WEB-INF/resources/css/home.css
+++ b/AISSystem/src/main/webapp/WEB-INF/resources/css/home.css
@@ -57,3 +57,82 @@ h2 {
 	width: 20%;
 	margin-left: 70%;
 }
+
+.success {
+	background-color: green; 
+	color: #fff;
+}
+
+.failed {
+	background-color: red; 
+	color: #fff;
+}
+
+.hidden {
+	display: none;
+}
+
+/* The Popup */
+.notification-popup {
+    font-family: 'Roboto', sans-serif;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    max-width: 350px; /* Full width */
+    height: auto; /* Full height */
+    bottom: 15px;
+    right: 15px;
+    padding: 10px 10px 10px 85px;
+    box-shadow: 0 0 15px #ccc;
+    background: #f0f0f0;
+}
+.dropdown {
+    display: inline-block;
+}
+.notification-popup .popup-content {
+    width: 100%;
+    height: auto;
+    overflow-wrap: break-word;
+}
+.notification-popup .popup-content h4 {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+}
+.notification-popup .popup-content .main-text {
+    font-size: 17px;
+    clear: left;
+    margin-bottom: 7px;
+}
+.notification-popup .bell-form {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 75px;
+}
+.notification-popup .bell-form .far {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    width: 40px;
+    height: 40px;
+}
+.notification-popup .popup-close .far {
+    position: absolute;
+    top: 0;
+    right: -20px;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+}
+.notification-popup .popup-close .far:hover {
+    color: #DC3545;
+    font-weight: bold;
+}
+.bell2 {
+	font-size: 35px;
+	text-align: center;
+}
+/*End of Popup*/
